# bakerydemo

./: .dockerignore  .editorconfig  .env  .env.example  .eslintignore  .eslintrc  .git-blame-ignore-revs  .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .python-version  .stylelintignore  .stylelintrc  .travis.yml  AGENTS.md  CONTRIBUTING.md  DEMO-NOTES.md  Dockerfile  Dockerfile.base  LICENSE  Makefile  Procfile  README  README.md  Vagrantfile  api.py  app.json  bakerydemo.json  bakerydemodb  blocks.py  contributing.md  csp.env  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  (+21 more)
.github/workflows/: ci.yml  docker.yml  lint.yml  nightly.yml
bakerydemo/: api.py  apps.py  graphql.py  headless.py  heroku_wsgi.py  serializers.py  test_nested_inline.py  urls.py  views.py  wsgi.py
bakerydemo/ai/: apps.py
bakerydemo/base/: api.py  apps.py  blocks.py  context_processors.py  filters.py  forms.py  index.py  jinja2tags.py  middleware.py  models.py  views.py  wagtail_hooks.py  widgets.py
config/: .env.local  settings.py  urls.py  wsgi.py
deploy/: sample.env  sample.init.sql
etc/: uwsgi.ini
frontend/: package-lock.json  package.json  vite.config.js
locations/: models.py  models_hack.py
media/: models.py
recipes/: models.py
requirements/: base.txt  development.txt  heroku.txt  production.txt
settings/: base.py  dev.py  local.py.example  production.py
templates/: 404.html  500.html  base.html
vagrant/: provision.sh
viewless/: apps.py
(+656 files in other folders)
