[tool.poetry]
name = "wagtail-avada-backery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wagtail_avada_backery"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-dotenv = "^1.4.2"
wagtail = "^5.1.1"
wagtail-modeladmin = "^1.0.0"
wagtail-font-awesome-svg = "^0.0.3"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
django-csp = "^3.7"
dj-database-url = "^2.1.0"
django-components = "^0.28.1"
django-environ = "^0.10.0"
wagtailvideos = "^4.2.2"
django-redis = "^5.3.0"
psycopg2-binary = "^2.9.7"
django-vite = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
